--- a/lab1-Skeleton/Makefile
+++ b/lab1-Skeleton/Makefile
@@ -21,7 +21,8 @@
 
 CC = gcc
 WERROR_CFLAGS = -Werror
-CFLAGS = -g -Wall -Wextra $(WERROR_CFLAGS)
+#CFLAGS = -g -Wall -Wextra $(WERROR_CFLAGS)
+CFLAGS = -g
 LAB = 1
 DISTDIR = lab1-$(USER)
 CHECK_DIST = ./check-dist
